# profile_switcher

./: .gitignore  .releaserc.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  profile_switcher.desktop
.github/workflows/: ci.yml  release.yml
debian/: changelog  changelog.template  control  postinst  rules
scripts/: build-deb-package.sh  build-release-assets.sh  install.sh  setup-repository.sh  update-cargo-version.sh
src/: config_handler.rs  main.rs  profile_selector.rs
src/templates/: config.toml
