[package]
name = "profile_switcher"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"
url = "2.5.2"
anyhow = "1.0.86"
dirs-next = "2.0.0" # For finding config directory
